force-app/main/default/objects/Incode_Config__c/Incode_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the Incode identity verification integration.</description>
    <label>Incode Config</label>
</CustomObject>