force-app/main/default/objects/Incode_Config__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <label>Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>