force-app/main/default/objects/Incode_Config__c/fields/Admin_Password__c.field-meta.xml
<CustomField>
    <fullName>Admin_Password__c</fullName>
    <label>Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>