force-app/main/default/objects/Incode_Config__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The Incode API key used in the Authorization header (Basic base64-encoded). Store this here if not using Named Credential authentication directly.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>