force-app/main/default/objects/Incode_Config__c/fields/Configuration_ID__c.field-meta.xml
<CustomField>
    <fullName>Configuration_ID__c</fullName>
    <description>The Incode workflow/flow Configuration ID used when initiating a verification session via /omni/start. Found in your Incode dashboard under Workflows or Flows.</description>
    <label>Configuration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>