force-app/main/default/objects/Incode_Config__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Controls which Incode API environment this org connects to. Enter "Demo" for demo-api.incodesmile.com or "Production" for saas-api.incodesmile.com. Defaults to Demo if blank.</description>
    <label>Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>