force-app/main/default/objects/Incode_Config__c/fields/Use_Production_API__c.field-meta.xml
<CustomField>
    <fullName>Use_Production_API__c</fullName>
    <description>Check this box to connect to the Incode Production API (saas-api.incodesmile.com). Leave unchecked to use the Demo API (demo-api.incodesmile.com).</description>
    <label>Use Production API</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>