force-app/main/default/objects/Incode_Config__c/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>Shared secret token used to validate inbound webhook requests from Incode. Must match the X-Incode-Secret header value.</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>